--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1631,3 +1631,12 @@ input[type="checkbox"]:focus{
 	font-size: 30px;
 	display: inline-block;
 }
+#adminSignup{
+	background-color: white;
+	color: black;
+	padding: 20px 20px;
+	font-size: 20px;
+}
+#adminSignup:hover{
+	background-color: lightslategray;	
+}
