Added math analysis back to search bar, we'll phase it out soon

--- a/app/views/subject/findatutor.html.erb
+++ b/app/views/subject/findatutor.html.erb
@@ -61,13 +61,15 @@
               <option value="Korean 5-6">Korean 5-6</option>
               <option value="Linear Algebra Honors">Linear Algebra Honors</option>
               <option value="Lit for Success">Lit for Success</option>
+              <option value="Math Analysis">Math Analysis</option>
+              <option value="Math Analysis Honors">Math Analysis Honors</option>
               <option value="Math Thinking">Math Thinking</option>
               <option value="Medical Biology">Medical Biology</option>
               <option value="Physics">Physics</option>
               <option value="Physiology">Physiology</option>
               <option value="Physiology Honors">Physiology Honors</option>
-              <option value="Math Analysis">Precalculus</option>
-              <option value="Math Analysis Honors">Precalculus Honors</option>
+              <option value="Precalculus">Precalculus</option>
+              <option value="Precalculus Honors">Precalculus Honors</option>
               <option value="Psychology">Psychology</option>
               <option value="Sociology">Sociology</option>
               <option value="Spanish 1-2">Spanish 1-2</option>
