--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -22,7 +22,7 @@
 	<div class="large_content">
 		<div class="container">
 			<h1>Need help?</h1>
-			<p id="homep">Click on the 'Home' page to sign up (as a tutor or a tutee) and visit the 'About' page to read about our website.
+			<p id="homep">Click on the 'Home' page to sign up (as a tutor) and visit the 'About' page to read about our website.
 			              If you need additional help, please email <a target="_blank" style="color: #00BFFF;"href="https://mail.google.com/mail/?view=cm&fs=1&to=cvtutormatch@gmail.com&su=Help - Tutor Matching&body=&bcc=">cvtutormatch@gmail.com</a></p>		
 		</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
