--- a/app/views/subject/findatutor.html.erb
+++ b/app/views/subject/findatutor.html.erb
@@ -28,8 +28,8 @@
    	          <option value="blank">Select</option>
    	          <option value="American Government">American Government</option>
    	          <option value="English 11">English 11</option>
-   	          <option value="Biology">Biology</option>
-   	          <option value="Chemistry">Chemistry</option>
+   	          <option value="The Living Earth">The Living Earth</option>
+   	          <option value="Chemistry in the Earth System">Chemistry in the Earth System</option>
    	          <option value="Applied Computer Programming (buffet)">Applied Computer Programming (buffet)</option>
    	          <option value="ELD">ELD</option>
    	          <option value="Earth Space Science">Earth Space Science</option>  
@@ -61,10 +61,7 @@
               <option value="Korean 5-6">Korean 5-6</option>
               <option value="Linear Algebra Honors">Linear Algebra Honors</option>
               <option value="Lit for Success">Lit for Success</option>
-              <option value="Math Analysis">Math Analysis</option>
-              <option value="Math Analysis Honors">Math Analysis Honors</option>
               <option value="Math Thinking">Math Thinking</option>
-              <option value="Medical Biology">Medical Biology</option>
               <option value="Physics">Physics</option>
               <option value="Physiology">Physiology</option>
               <option value="Physiology Honors">Physiology Honors</option>
