delete study group 6

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
 			<li class="item"><a href="/home">Home</a></li><br>
 			<li class="item"><a href="/about">About</a></li><br>
 			<li class="item"><a href="/help">Help</a></li><br>
-			<li class="item"><a href="/studygroup">Study Groups</a></li><br>
+			# <li class="item"><a href="/studygroup">Study Groups</a></li><br>
 
 			<li class="item profile">
 			
