--- a/app/views/static_pages/studygroup.html.erb
+++ b/app/views/static_pages/studygroup.html.erb
@@ -1,56 +1,56 @@
-<head>
-  	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
-  	<script src="jquery-3.3.1.min.js"></script>
-</head>
-<% provide(:title, 'Study Group') %>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/help">Help</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-<div class="large_content" id="large_content">
-  <h1>Find Other Students</h1>
-</div>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Jack</td>
-      <td>Mawhinney</td>
-      <td>@jack</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Vikram</td>
-      <td>Chilkunda</td>
-      <td>@vikram</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Adarsh</td>
-      <td>Chilkunda</td>
-      <td>@adarsh</td>
-    </tr>
-  </tbody>
-</table>
+# <head>
+#   	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
+#   	<script src="jquery-3.3.1.min.js"></script>
+# </head>
+# <% provide(:title, 'Study Group') %>
+#   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+#     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+#       <span class="navbar-toggler-icon"></span>
+#     </button>
+#     <div class="collapse navbar-collapse" id="navbarText">
+#       <ul class="navbar-nav mr-auto">
+#         <li class="nav-item">
+#           <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+#         </li>
+#         <li class="nav-item">
+#           <a class="nav-link" href="/about">About</a>
+#         </li>
+#         <li class="nav-item">
+#           <a class="nav-link" href="/help">Help</a>
+#         </li>
+#       </ul>
+#     </div>
+#   </nav>
+# <div class="large_content" id="large_content">
+#   <h1>Find Other Students</h1>
+# </div>
+# <table class="table">
+#   <thead>
+#     <tr>
+#       <th scope="col">#</th>
+#       <th scope="col">First</th>
+#       <th scope="col">Last</th>
+#       <th scope="col">Handle</th>
+#     </tr>
+#   </thead>
+#   <tbody>
+#     <tr>
+#       <th scope="row">1</th>
+#       <td>Jack</td>
+#       <td>Mawhinney</td>
+#       <td>@jack</td>
+#     </tr>
+#     <tr>
+#       <th scope="row">2</th>
+#       <td>Vikram</td>
+#       <td>Chilkunda</td>
+#       <td>@vikram</td>
+#     </tr>
+#     <tr>
+#       <th scope="row">3</th>
+#       <td>Adarsh</td>
+#       <td>Chilkunda</td>
+#       <td>@adarsh</td>
+#     </tr>
+#   </tbody>
+# </table>
