--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
 			<i class="fa fa-times fa-2x nav-times"></i>
 			<li class="item"><a href="/home">Home</a></li><br>
 			<li class="item"><a href="/about">About</a></li><br>
-			<li class="item"><a href="/help">Help.</a></li><br>
+			<li class="item"><a href="/help">Help</a></li><br>
 
 			<li class="item profile">
 			
