--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -25,7 +25,7 @@
         <%= f.label :email %><span class="required">*</span>
         <%= f.email_field :email, placeholder: "example@gusd.net", class: 'form-control' %>
         
-        <%= f.label :6_Digit_ID_Number %><span class="required">*</span>
+        <%= f.label :ID_Number %><span class="required">*</span>
         <%= f.password_field :id_num, placeholder: "123456", class: 'form-control' %>
 
         <%= f.label :grade %><span class="required">*</span>
