--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -23,7 +23,7 @@
         <%= f.text_field :name, placeholder: "John Smith",class: 'form-control' %>
         
         <%= f.label :email %><span class="required">*</span>
-        <%= f.email_field :email, placeholder: "example@stu.gusd.net", class: 'form-control' %>
+        <%= f.email_field :email, placeholder: "example@gmail.com", class: 'form-control' %>
         
         <%= f.label :ID_Number, '6 Digit ID Number' %><span class="required">*</span>
         <%= f.password_field :id_num, placeholder: "123456", class: 'form-control' %>
