--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -58,7 +58,7 @@
           <% if !Person.find_by(id: session[:tutor_id]).academy %>
             <span style="font-weight: bold;"><%= f.label :rate %></span>
             <%= f.text_field :rate, class: 'form-control', value: "$" %><br>
-          <% else %>
+          # <% else %>
             <span style="font-weight: bold;"><%= f.label "Times Available: (select all that apply for the day(s) you selected)" %></span><br>
               <%= f.check_box :timeslots, { multiple: true, :style => "width: 25px; height: 25px;" }, "3:00pm-4:30pm", nil %>
               <%= f.label(:timeslots, "3:00pm-4:30pm (recommended)") %><br>
@@ -68,7 +68,7 @@
               <%= f.label(:timeslots, "6:00pm-7:30pm") %><br>
               <%= f.check_box :timeslots, { multiple: true, :style => "width: 25px; height: 25px;" }, "7:30pm-9:00pm", nil %>
               <%= f.label(:timeslots, "7:30pm-9:00pm") %><br><br>
-          <% end %>
+          # <% end %>
 
           <div id="center_save_changes"> <%= f.submit "Save", class: "btn btn-primary" %> </div><br>
         </div>
