.gusd.net label

--- a/app/views/people/adminSignup.html.erb
+++ b/app/views/people/adminSignup.html.erb
@@ -22,7 +22,7 @@
         <%= f.text_field :name, placeholder: "Joe Falcon",class: 'form-control' %>
         
         <%= f.label :email %><span class="required">*</span>
-        <%= f.email_field :email, placeholder: "example@gmail.com", class: 'form-control' %>
+        <%= f.email_field :email, placeholder: "abcd1234@stu.gusd.net", class: 'form-control' %>
          
         <%= f.label :password %><span class="required">*</span>
         <%= f.password_field :password, class: 'form-control' %>
