.gusd.net label

--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -22,7 +22,7 @@
         <%= f.label :name %><span class="required">*</span>
         <%= f.text_field :name, placeholder: "John Smith",class: 'form-control' %>
         
-        <%= f.label :email, 'Student Email' %><span class="required">*</span>
+        <%= f.label :email, 'GUSD Student Email' %><span class="required">*</span>
         <%= f.email_field :email, placeholder: "abcd1234@stu.gusd.net", class: 'form-control' %>
         
         <%= f.label :ID_Number, '6 Digit ID Number' %><span class="required">*</span>
