--- a/app/views/subject/findatutor.html.erb
+++ b/app/views/subject/findatutor.html.erb
@@ -28,9 +28,9 @@
    	          <option value="blank">Select</option>
    	          <option value="American Government">American Government</option>
    	          <option value="English 11">English 11</option>
-   	          <option value="The Living Earth">The Living Earth</option>
+   	          <option value="The Living Earth (Biology)">The Living Earth</option>
    	          <option value="Chemistry in the Earth System">Chemistry in the Earth System</option>
-   	          <option value="Applied Computer Programming (buffet)">Applied Computer Programming (buffet)</option>
+   	          <option value="Applied Computer Programming (buffet)">Applied Programming (buffet)</option>
    	          <option value="ELD">ELD</option>
    	          <option value="Earth Space Science">Earth Space Science</option>  
    	          <option value="Economics">Economics</option>
