--- a/app/views/subject/findatutor.html.erb
+++ b/app/views/subject/findatutor.html.erb
@@ -30,7 +30,7 @@
    	          <option value="English 11">English 11</option>
    	          <option value="The Living Earth (Biology)">The Living Earth</option>
    	          <option value="Chemistry in the Earth System">Chemistry in the Earth System</option>
-   	          <option value="Applied Computer Programming (buffet)">Applied Programming (buffet)</option>
+   	          <option value="Applied Programming (buffet)">Applied Programming (buffet)</option>
    	          <option value="ELD">ELD</option>
    	          <option value="Earth Space Science">Earth Space Science</option>  
    	          <option value="Economics">Economics</option>
@@ -48,7 +48,6 @@
               <option value="German 5-6 Honors">German 5-6 Honors</option>
               <option value="Health">Health</option>
    	          <option value="Human Geography">Human Geography</option>  
-   	          
    	          <option value="Integrated Math I">Integrated Math I</option>
               <option value="Integrated Math II">Integrated Math II</option>
               <option value="Integrated Math II Accelerated">Integrated Math II Accelerated</option>
