--- a/app/views/subject/findatutor.html.erb
+++ b/app/views/subject/findatutor.html.erb
@@ -28,8 +28,8 @@
    	          <option value="blank">Select</option>
    	          <option value="American Government">American Government</option>
    	          <option value="English 11">English 11</option>
-   	          <option value="The Living Earth (Biology)">Biology</option>
-   	          <option value="Chemistry in the Earth System">Chemistry in the Earth System</option>
+   	          <option value="Biology">The Living Earth (Biology)</option>
+   	          <option value="Chemistry">Chemistry in the Earth System</option>
    	          <option value="Applied Programming (buffet)">Applied Programming (buffet)</option>
    	          <option value="ELD">ELD</option>
    	          <option value="Earth Space Science">Earth Space Science</option>  
