--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -40,9 +40,12 @@
         <%= f.label "Admin Key (admin use only)" %>
         <%= f.password_field :adminKey, class: 'form-control' %>
         
-        <%= f.label "Academy Member" %>
+        <%= f.label :academy, 'Academy Member' %>
         <%= f.check_box :academy, {class: 'form-control'}, "true", "false"%>        <!--  checked_value = true, unchecked_value = false, -->
-  
+        
+        <%= f.label :super, 'Super Tutor' %>
+        <%= f.check_box :super, {class: 'form-control'}, "true", "false"%> 
+        
         <%= f.submit "Create my account", class: "btn btn-primary", id: "specialanimatedbutton" %>
     <% end %>
    
