fix supert in sign up

--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -43,7 +43,7 @@
         <%= f.label :aosm, 'Academy Member' %>
         <%= f.check_box :academy, {class: 'form-control'}, "true", "false"%>        <!--  checked_value = true, unchecked_value = false, -->
         <%= f.label :supertut, 'Super Tutor' %>
-        <%= f.check_box :academy, {class: 'form-control'}, "true", "false"%> 
+        <%= f.check_box :supert, {class: 'form-control'}, "true", "false"%> 
         <%= f.submit "Create my account", class: "btn btn-primary", id: "specialanimatedbutton" %>
     <% end %>
    
