--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -51,7 +51,7 @@
               <!--<div class="loc-popup">CV Library</div>-->
             <!--  <div class="loc-popup">Virtual Tutoring</div>-->
             <!--</div>-->
-          <% elsif Person.find_by(id: subjuctivo.creatorid).supert %>
+          <% elsif Person.find_by(id: subjuctivo.creatorid).super %>
             <div class="rate">
               Super Tutor - Free
             </div>
