--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -7,7 +7,9 @@
   <%= render "layouts/header" %>
   <% provide(:title, @person.name) %>
   <% if @person.academy %>
-    <h1 id="bob" style="font-size:3vw;">Profile - Tutor (Academy)</h1>
+    <h1 id="bob" style="font-size:3vw;">Profile - Academy Tutor</h1>
+  <% elsif @person.supert %>
+  <h1 id="bob" style="font-size:3vw;">Profile - Super Tutor</h1>
   <% else %>
     <h1 id="bob" style="font-size:3vw;">Profile - Tutor</h1>
   <% end %>
@@ -23,7 +25,7 @@
             <tr>
               <th class="tutoringsubject" style="width:43%", "position:absolute">Tutoring:</th>
               <th class="tutoringday" style="width:22%", "position:absolute">Day</th> 
-               <% if !@person.academy %>
+               <% if !@person.academy && !@person.supert%>
                  <th class="tutoringrate" style="width:15%", "position:absolute">Rate</th>
               <% end %>
               <th class="tutoringoptions" style="width:24%", "position:absolute">Options <div><%= link_to "Delete All", subjectdelete_path(check: -2), method: :destroy,
@@ -37,7 +39,7 @@
                     <tr>
                       <th class="tutoringsubject" style="width:43%", "position:absolute"> <%= i.name %></th>
                       <th class="tutoringday" style="width:22%", "position:absolute"> <%= i.days.join(', ') %></th> 
-                        <% if !@person.academy %>
+                        <% if !@person.academy && !@person.supert%>
                             <th class="tutoringrate" style="width:15%", "position:absolute"> <%= i.rate %></th>
                         <% end %>
                       
