--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -41,10 +41,11 @@
         <%= f.password_field :adminKey, class: 'form-control' %>
         
         <%= f.label :academys, 'Academy Member' %>
-        <%= f.check_box :academy, {class: 'form-control'}, "true", "false"%>        <!--  checked_value = true, unchecked_value = false, -->
+        <%= f.check_box :academy, {class: 'form-control'}, "true", "false"%>      <!--  checked_value = true, unchecked_value = false, -->  
 
-        <%= f.label :supertut, 'Super Tutor" %>
-        <%= f.check_box :supert, {class: 'form-control'}, "true", "false"%>
+        <%= f.label :supertut, 'Super Tutor' %>
+        <%= f.check_box :supert, {class: 'form-control'}, "true", "false"%>       <!--  checked_value = true, unchecked_value = false, -->
+
         <%= f.submit "Create my account", class: "btn btn-primary", id: "specialanimatedbutton" %>
     <% end %>
    
